In RE action, invoke java with some args
Summary:
Disables verification and configures the optimizer to make more sense in
the RE environment.

Improves buck overhead in RE actions from ~1.8s->~1.0s

Reviewed By: ttsugriy

fbshipit-source-id: 209e57c757